Fix Project Section Spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,7 +27,6 @@ a:hover {
     color: #1f61b1;
 }
 
-
 body {
     display: flex;
     min-height: 100vh;
@@ -108,7 +107,7 @@ footer {
 }
 
 .footer-contact {
-    padding: 50px 0 20px 0;
+    padding: 40px 0 20px 0;
 }
 
 .footer-contact li {
